--- a/templates/auth/login.html
+++ b/templates/auth/login.html
@@ -107,7 +107,7 @@
         <div id="accFailedModal" class="modal is-active">
             <div class="modal-background"></div>
             <div class="modal-card box" style="padding: 3em;">
-                <p class="title is-3 has-text-weight-bold has-text-centered">Login to continue</p>
+                <p class="title is-3 has-text-weight-bold has-text-centered">Hol'up, login required</p>
                 <p class="has-text-centered">We will need you login in order to continue to your destination.<br><small
                         class="has-text-grey">If you are constantly getting this error, please check that you have
                     allowed first party cookies.</small></p>
