--- a/templates/auth/login.html
+++ b/templates/auth/login.html
@@ -118,4 +118,31 @@
         </div>
     {% endif %}
 
+    {% if verification_code_accepted %}
+        <div id="verificationOKModal" class="modal is-active">
+            <div class="modal-background"></div>
+            <div class="modal-card box" style="padding: 3em;">
+                <p class="title is-3 has-text-weight-bold has-text-centered">Good to go!</p>
+                <p class="has-text-centered">Thank you for verifying your email, you may now login.</p>
+                <br>
+                <a onclick="$('#accFailedModal').fadeOut('fast');" class="button is-light is-fullwidth"><i
+                        class="fas fa-sign-in-alt"></i>&ensp;Proceed to login</a>
+            </div>
+        </div>
+    {% endif %}
+
+    {% if verification_code_denied %}
+        <div id="verificationFailedModal" class="modal is-active">
+            <div class="modal-background"></div>
+            <div class="modal-card box" style="padding: 3em;">
+                <p class="title is-3 has-text-weight-bold has-text-centered">Something broke!</p>
+                <p class="has-text-centered">We are unable to verify your email as the verification link used is invalid.</p>
+                <p class="has-text-centered">If you require a new verification code, login into your account and follow the instructions.</p>
+                <br>
+                <a onclick="$('#accFailedModal').fadeOut('fast');" class="button is-light is-fullwidth"><i
+                        class="fas fa-times"></i>&ensp;Close</a>
+            </div>
+        </div>
+    {% endif %}
+
 {% endblock %}
